# appmathsproj

./: .gitignore  .gnuplot  CMakeLists.txt  constants.h  line_plot.cpp  line_plot.h  main.cpp
